--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="./js/new.js"></script>
     <script src="./js/ranking.js"></script>
     <script src="./js/regular.js"></script>
+    <script src="./js/recommend.js"></script>
+    <script src="./js/mdrecommend.js"></script>
 </head>
 
 <body>
@@ -197,10 +199,8 @@
                     <li>건강한 시니어식단</li>
                     <li>가족식단</li>
                     <li>든든한 가족식단</li>
-                    <li>유아식단</li>
-                    <li>든든한 유아식단</li>
-                    <li>어린이식단</li>
-                    <li>든든한 어린이 식단</li>
+                    <li>아이식단</li>
+                    <li>든든한 아이식단</li>
                 </ul>
             </div>
             <div id="regular_list">
@@ -292,15 +292,13 @@
             <span>강*예님 추천</span>
         </div>
         <div class="recommend_content">
-            <div>
+            <div class="rec_img">
                 <img src="img/cp_image_0.png" alt="후기사진">
             </div>
             <div class="rec_right">
                 <div class="rec_right_header">
-                    <h3>강*예님의 장바구니</h3>
-                    <p>친구들이랑 홈파티할 때나, 최근 후 집에서 혼술할 때<br>
-                        간단히 뚝-딱 차리기 좋아요!<br>
-                        밥반찬으로도 술 안주로도 딱이에요.</p>
+                    <h3></h3>
+                    <p></p>
                 </div>
                 <div class="rec_right_content"> <!-- 추천 상품 리스트 -->
                     <!-- js -->
@@ -340,6 +338,7 @@
         </div>
         <div class="banchan_list banchan_list_tall">
             <div class="prev"><img src="img/icon/icon-arrow-left-a3a3a3-24.svg"></div>
+            <div class="next"><img src="img/icon/icon-arrow-right-a3a3a3-24.svg"></div>
             <!-- js -->
 <!-- 
             <div class="product">
@@ -352,7 +351,7 @@
                 </div>
             </div>
 -->
-            <div class="next"><img src="img/icon/icon-arrow-right-a3a3a3-24.svg"></div>
+            
         </div>
     </section>
 
