recommend tab active

--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
         </div>
         <div class="recommend_tab">
             <span class="on">강*예님 추천</span>
-            <span>강*예님 추천</span>
-            <span>강*예님 추천</span>
-            <span>강*예님 추천</span>
+            <span>오*원님 추천</span>
+            <span>강*늘님 추천</span>
+            <span>김*훈님 추천</span>
         </div>
         <div class="recommend_content">
             <div class="rec_img">
